new changes on the checkout link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="logoAFMF.png" alt="Logo Arquivo Intelectual Brasileiro" class="logo">
             <h1 class="fade-in">O Fim da Dúvida. <br> O Começo da Alta Cultura.</h1>
             <p class="subtitle fade-in">Cansado de perguntar "por onde começar"? Tenha acesso ao sistema completo de Mário Ferreira dos Santos, perfeitamente organizado para a sua formação definitiva.</p>
-            <a href="https://pay.hotmart.com/K99776127Y" class="cta-button">QUERO O MAPA COMPLETO POR APENAS R$40</a>
+            <a href="https://pay.hotmart.com/K99776127Y?checkoutMode=10" class="cta-button">QUERO O MAPA COMPLETO POR APENAS R$40</a>
             <p class="cta-subtext">Pagamento único. Sem mensalidades.</p>
         </div>
     </header>
@@ -67,7 +67,7 @@
                         <p>Acesso a palestras e intervenções que revelam a profundidade e a aplicação do pensamento de Mário Ferreira dos Santos.</p>
                     </div>
                 </div>
-                 <a href="https://pay.hotmart.com/K99776127Y" class="cta-button secondary">GARANTIR MEU ACERVO COMPLETO AGORA</a>
+                 <a href="https://pay.hotmart.com/K99776127Y?checkoutMode=10" class="cta-button secondary">GARANTIR MEU ACERVO COMPLETO AGORA</a>
             </div>
         </section>
         
@@ -144,7 +144,7 @@
                 <p>Adquirir este acervo é mais do que um ato de auto-aperfeiçoamento. É um voto de confiança na alta cultura. É um passo para se tornar não apenas um consumidor de ideias, mas um homem culto, com uma base intelectual sólida, capaz de influenciar sua família, seus amigos e sua comunidade.</p>
                 <p>Acesso vitalício a todo este legado por um pagamento único de:</p>
                 <div class="price-display">R$40</div>
-                <a href="https://pay.hotmart.com/K99776127Y" class="cta-button">EU ASSUMO ESTE COMPROMISSO</a>
+                <a href="https://pay.hotmart.com/K99776127Y?checkoutMode=10" class="cta-button">EU ASSUMO ESTE COMPROMISSO</a>
                 <p class="cta-subtext">Sua jornada para a verdadeira cultura começa agora.</p>
             </div>
         </section>
